# Gra_Wizard

./: README.md
Gra/: CMakeLists.txt  main.cpp
Gra/include/: Enemy.h  Game.h  Magic.h  Menu.h  Player.h  Shot_Magic.h
Gra/src/: Collider.cpp  Collider_Platform.cpp  EndWindow.cpp  Enemy.cpp  GameSave.cpp  Goblin.cpp  Menu.cpp  Platform.cpp  Player.cpp  Skeleton.cpp
Wizard/: CMakeLists.txt  main.cpp
Wizard/include/: Collider.h  Enemy.h  Game.h  GameSave.h  Goblin.h  Magic.h  Menu.h  Platform.h  Player.h  Shot_Magic.h  Trap.h
Wizard/src/: Collider.cpp  Enemy.cpp  Game.cpp  Magic.cpp  Platform.cpp  Player.cpp  Shot_Magic.cpp  Trap.cpp
Wizard_CB/Game/: CMakeLists.txt  Game.cbp  Game.depend  Game.layout  main.cpp
Wizard_CB/Game/include/: Bonus.h  Collider.h  Collider_Platform.h  EndWindow.h  Enemy.h  Game.h  Goblin.h  Magic.h  Menu.h  Platform.h  Player.h  Shot_Magic.h  Skeleton.h  Trap.h
Wizard_CB/Game/src/: Bonus.cpp  Collider.cpp  Collider_Platform.cpp  Enemy.cpp  Game.cpp  Goblin.cpp  Magic.cpp  Menu.cpp  Platform.cpp  Player.cpp  Shot_Magic.cpp  Skeleton.cpp  Trap.cpp
gra_pliki_cpp_h/: main.cpp
gra_pliki_cpp_h/include/: Collider.h  Enemy.h  Game.h  GameSave.h  Goblin.h  Magic.h  Platform.h  Player.h
gra_pliki_cpp_h/src/: Collider.cpp  Enemy.cpp  Game.cpp  GameSave.cpp  Goblin.cpp  Magic.cpp  Platform.cpp  Player.cpp
